# launchcontainers

./: .buildinfo  api.html  changelog.html  cli_reference.html  code_structure.html  concepts.html  configuration.html  extending.html  genindex.html  index.html  installation.html  objects.inv  prepare_dwi.html  prepare_fmriprep.html  prepare_glm.html  prepare_ret.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorial.html
.claude/: settings.json  settings.local.json
.doctrees/: api.doctree  changelog.doctree  cli_reference.doctree  configuration.doctree  extending.doctree  index.doctree  prepare_dwi.doctree  prepare_fmriprep.doctree  prepare_glm.doctree
MR_pipelines/00_dicom_to_nifti/: src_heudiconv_step1.sh  src_heudiconv_step2.sh
MR_pipelines/00_dicom_to_nifti/heuristic/: heuristic_BCBL.py  heuristic_all_IRAKEINU.py  heuristic_all_IRAKEINU_ME.py  heuristic_all_VOTCLOC.py  heuristic_anat_VOTCLOC.py  heuristic_fmap_VOTCLOC.py  heuristic_sbref_VOTCLOC.py  heuristic_swi_VOTCLOC.py
MR_pipelines/00_dicom_to_nifti/run_local/: local_heudiconv.sh
MR_pipelines/03_fmriprep/run_dipc/: launch_fmriprep_on_slurm.sh  src_fmriprep.slurm
MR_pipelines/03_fmriprep/run_local/: launch_fmriprep_local.sh
MR_pipelines/04_fMRI_first-level/prepare_glm/: 1_prepare_bids_events_tsv.py
WC_matching_mat/: api.html  bcbl_computing.html  changelog.html  cli_reference.html  configuration.html  extending.html  genindex.html  index.html  objects.inv  prepare_dwi.html  prepare_fmriprep.html  prepare_glm.html  prepare_prf.html  py-modindex.html  search.html  searchindex.js  tutorial.html
WC_matching_mat/.doctrees/: bcbl_computing.doctree  code_structure.doctree  index.doctree  prepare_prf.doctree
WC_matching_mat/_sources/: bcbl_computing.rst.txt  concepts.rst.txt  index.rst.txt  prepare_dwi.rst.txt  prepare_fmriprep.rst.txt  prepare_prf.rst.txt
_sources/: api.rst.txt  bcbl_computing.rst.txt  cli_reference.rst.txt  code_structure.rst.txt  extending.rst.txt  index.rst.txt  prepare_ret.rst.txt
example_configs/0.4.0/: lc_config_045.yaml  lc_config_048.yaml
launchcontainers/: do_prepare.py
launchcontainers/prepare/: dwi_prepare_input.py  glm_prepare.py  prepare_multisession_dwi.py
launchcontainers/tests/: check_bcbl_glm_bids.csv  subseslist_japan.txt  subseslist_japan_fmriprep.txt
launchcontainers/tests/compare_dataset/: 04_check_sourcedata_dates.py  05_compare_sourcedata_dates.py  bcbl_sourcedata.csv  dipc_sourcedata.csv
launchcontainers/tests/dcm_to_bids_workflow/: 00_merge_split_ses_reording_runs.py  01_drop_duplicated_sbrefs.py  01_rename_ME_magnitude.py  02_copy_bids_component.py  03_drop_duplicated_sbrefs.py  04_check_sbref_bold_dtype.py  05_fix_bold_dtype.py  analysis_note.md  inspect_dicom.py
launchcontainers/tests/glm_strategy/: contrast_IRAKEINU_all.yaml  contrast_IRAKEINU_new.yaml  contrast_Japan_all.yaml  contrast_VOTCLOC_3.yaml  contrast_VOTCLOC_short.yaml  fir_curve_metrics.py  glm_surface_IRAKEINU_HMC_explore.py  glm_surface_check_model_strategy.py  launch_allses_glm_FIR_local.sh  launch_allses_glm_slurm.sh  launch_glm_ips.sh  launch_glm_local.sh  launch_glm_local_IRAKEINU.sh  launch_glm_local_VOTCLOC.sh  launch_glm_slurm.sh  run_allses_glm_FIR.py  strategy.yaml  subseslist_HMC.txt  subseslist_final_v3_missing.txt
launchcontainers/tests/power_analysis_ohbm/: launch_power_analysis_slurm.sh  power_99_ses.txt  power_analysis_ohbm.py  roi_config_VOTCLOC.yaml
launchcontainers/tests/prepare_glm/: 01_generate_rerun_check_from_labnote.py  01b_add_rerun_check_interactive.py  01c_generate_rerun_check_from_bids.py  02_prepare_floc_events_tsv.py  03_prepare_WC_are_in_lc_module.txt  analysis_note.md  create_tedana_symlinks.py
launchcontainers/tests/prepare_prf/: 02_prepare_prfresult.py  03_prepare_prf_subses_json.py
launchcontainers/tests/run_glm/: contrast_IRAKEINU_all.yaml  contrast_VOTCLOC_all.yaml  contrast_VOTCLOC_short.yaml  contrast_WCblock.yaml  contrast_WCnonestop.yaml  contrast_wcblock.yaml  glm_surface_IRAKEINU.py  glm_surface_VOTCLOC.py  glm_surface_VOTCLOC_HMC_explore.py  launch_allses_glm_slurm.sh  launch_glm_ips.sh  run_glm.py  (+5 more)
main/: api.html  bcbl_computing.html  changelog.html  cli_reference.html  code_structure.html  concepts.html  configuration.html  extending.html  genindex.html  index.html  installation.html  objects.inv  prepare_dwi.html  prepare_fmriprep.html  prepare_glm.html  prepare_prf.html  prepare_ret.html  py-modindex.html  search.html  searchindex.js  tutorial.html
main/.doctrees/: api.doctree  bcbl_computing.doctree  concepts.doctree  installation.doctree  prepare_fmriprep.doctree  prepare_ret.doctree  tutorial.doctree
main/_sources/: changelog.rst.txt  configuration.rst.txt  index.rst.txt  installation.rst.txt  prepare_glm.rst.txt  prepare_prf.rst.txt  tutorial.rst.txt
main/_static/: theme_overrides.css
src/launchcontainers/: launch.py
(+34 files in other folders)
