[build-system]
requires = ["poetry-core","build"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "launchcontainers"
version = "0.4.5"
description = "A Python based soft to launch neuroimaging containers on clusters"
authors = [ "Garikoitz Lerma-Usabiaga",
            "Leandro Lecca",
            "Mengxing Liu",
            "Yongning Lei"
            ]
# Acknowledgments
# I would like to thank Iñigo Tellaetxe from CompNeuroLabBilbao for his help on packaging this repository

maintainers = ["Garikoitz Lerma-Usabiaga", "Yongning Lei"]
readme = "README.md"
repository = "https://github.com/garikoitz/launchcontainers"
license = "MIT"
keywords = ["HPC", "MRI","nilearn", "RTP2","DWI","dMRI"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
packages = [{include = "launchcontainers"}]
[tool.poetry.scripts]
# the main function
lc = "launchcontainers.cli:main"

[tool.poetry.dependencies]
# nilearn
nilearn = ">=0.10.4"
# matplotlib
matplotlib = "*"
# bokeh
bokeh = ">=2.4.2"
# python after Oct 4, 2021
python = "^3.10"
# bids no limit
bids = "*"
# ipython after Oct 30, 2021
ipython = ">=7.29.0"
# pybids after May 1, 2023
pybids = "^0.16.1"
# distributed belongs to dask, it is after Jan, 2024
distributed = ">=2024.1.0"
dask = ">=2024.1.0"
# dask-jobqueue after Feb 22, 2024
dask-jobqueue = ">=0.8.5"
# After April 3, 2023 nibabel = "^5.1.0"
nibabel = "*"
# After Jan 2, 2024 numpy = ">=1.26.3"
numpy = "*"
# After Jan 19, 2023 pandas = ">=1.5.3"
pandas = "*"
# After Nov 18, 2023 scipy = "^1.11.4"
scipy = "*"
# After July 18, 2023 PyYAML = "6.0.1"
PyYAML = "*"
coverage-conditional-plugin = "^0.7.0"
requests = "<3.0,>=2.26"
heudiconv = ">=1.3.2"
setuptools = "^67.0.0"
typer = ">=0.15.3"
openpyxl = ">=3.1.5"

[tool.poetry.dev-dependencies]
nox-poetry = "*"
# Testing
pytest = "*"
pytest-cov = "*"
coverage_conditional_plugin = "*"
# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"
# Formatting
black = {version = "^23.1a1", allow-prereleases = true}
