[build-system]
requires = ["poetry-core","build"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "launchcontainers"
version = "0.4.8"
description = "A Python based soft to launch neuroimaging containers on clusters"
authors = [ "Garikoitz Lerma-Usabiaga",
            "Leandro Lecca",
            "Mengxing Liu",
            "Yongning Lei"
            ]
# Acknowledgments
# We would like to thank Iñigo Tellaetxe from CompNeuroLabBilbao for his help on packaging this repository
# We would also like to thank Qian Chu from MPIEA for his help on setting up sphinx and github workflow for this repository

maintainers = ["Garikoitz Lerma-Usabiaga", "Yongning Lei"]
readme = "README.md"
repository = "https://github.com/garikoitz/launchcontainers"
license = "MIT"
keywords = ["HPC", "MRI","nilearn", "RTP2","DWI","dMRI","fMRI","fMRIprep","PRF"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
packages = [{include = "launchcontainers"},
            {include = "analysis_checker"},  ]

[tool.poetry.scripts]
# the main function
lc = "launchcontainers.cli:main"
checker = "analysis_checker.check_analysis_integrity:main"

[tool.poetry.dependencies]
# nilearn
nilearn = ">=0.10.4"
# matplotlib
matplotlib = "*"
# bokeh
bokeh = ">=2.4.2"
# python after Oct 4, 2021
# compensate for centOS7, otherwise python = "^3.10"
python = "^3.10"
# bids no limit
bids = "*"
# ipython after Oct 30, 2021
ipython = ">=7.29.0"
# pybids after May 1, 2023
pybids = "^0.16.1"
# After April 3, 2023 nibabel = "^5.1.0"
nibabel = "*"
# After Jan 2, 2024 numpy = ">=1.26.3"
numpy = "<1.25"
# After Jan 19, 2023 pandas = ">=1.5.3"
pandas = "*"
# After Nov 18, 2023 scipy = "^1.11.4"
scipy = "*"
# After July 18, 2023 PyYAML = "6.0.1"
PyYAML = "*"
coverage-conditional-plugin = "^0.7.0"
requests = "<3.0,>=2.26"
heudiconv = ">=1.3.2"
setuptools = "^67.0.0"
typer = ">=0.15.3"
openpyxl = ">=3.1.5"
h5py = ">=3.0"
rich = ">=13.0"
pre-commit = "*"
tedana = "26.0.3"

[tool.poetry.dev-dependencies]
nox-poetry = "*"
types-PyYAML = "*"
# Testing
pytest = "*"
pytest-cov = "*"
coverage_conditional_plugin = "*"
# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"
# Formatting
black = {version = "^23.1a1", allow-prereleases = true}
# Documentation
sphinx = ">=7.0"
pydata-sphinx-theme = ">=0.15"
sphinx-copybutton = "*"
nbsphinx = "*"
myst-parser = "*"
